re-organized multiturn pipeline, cleaned parsed prompts

--- a/scripts/Worksheet.ipynb
+++ b/scripts/Worksheet.ipynb
@@ -2,7 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File updated successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "# Define the file path\n",
+    "file_path = '../results/parsed_prompts_specialty_x_domain.json'\n",
+    "\n",
+    "# Read the data from the JSON file\n",
+    "with open(file_path, 'r') as file:\n",
+    "    data = json.load(file)\n",
+    "\n",
+    "# Modify the id field in each entry\n",
+    "for entry in data:\n",
+    "    entry['id'] = f\"20-{entry['id']}\"\n",
+    "\n",
+    "# Save the modified data back to the same JSON file\n",
+    "with open(file_path, 'w') as file:\n",
+    "    json.dump(data, file, indent=4)\n",
+    "\n",
+    "print(\"File updated successfully.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -17,16 +51,8 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import json\n",
-    "\n",
-    "json_file_path = \"../results/medical_ai_tasks.json\"\n",
-    "\n",
-    "# Load JSON data from file\n",
-    "with open(json_file_path, 'r', encoding='utf-8') as f:\n",
-    "    data = json.load(f)\n",
-    "\n",
-    "len(data)"
+    "system_prompt_chatbot = multiturn_style_1.system_prompt_chatbot()  + \"In the prompt you see the whole chat history. The chat started with the request from a healthcare worker. Your task is to answer the questions and only ask follow up questions, if the user did not provide enough information in its input.\"\n",
+    "system_prompt_user = multiturn_style_1.system_prompt_user()  + \"In the prompt you see the whole chat history. The chat started with your initial request. You want to get an answer to the first question you asked. Your task is to ask followup questions and to interact with the chatbot to get a clear answer to your initial, as a health care worker would do.\""
    ]
   },
   {
@@ -122,6 +148,111 @@
     "plt.colorbar()\n",
     "plt.title(\"Sentence Clusters based on Sentence Embeddings (I haven't found this useful honestly)\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Bastien Code for inspiration -> Multiturn\n",
+    "\n",
+    "def system_prompt(self, final=False) -> str:\n",
+    "\n",
+    "        # First sentence options\n",
+    "        # Updated first sentence options\n",
+    "        if self.brief:\n",
+    "            first_sentence_options = [\n",
+    "                \"As a doctor in {}, you are in {} Your task is to diagnose a patient by asking concise questions and providing brief reasoning. Keep your explanations short and to the point, and ask pertinent questions.\",\n",
+    "                \"You are practicing medicine in {}. {} Your mission is to determine the patient's diagnosis through concise inquiry, being efficient in your thought process. Make your thinking clear but succinct, then pose relevant questions.\",\n",
+    "                \"While working as a physician in {}, {} Your role is to identify the patient's ailment by asking concise questions and efficiently analyzing your thoughts. Be explicit yet brief in your reasoning, and ask appropriate questions.\",\n",
+    "                \"In {}, you find yourself in {} Your task is to diagnose a patient by asking concise questions and providing brief reasoning. Keep your explanations short and to the point, and ask pertinent questions.\",\n",
+    "                \"Serving as a doctor in {}, {} Your mission is to determine the patient's diagnosis through concise inquiry, being efficient in your thought process. Make your thinking clear but succinct, then pose relevant questions.\",\n",
+    "                \"As a physician in {}, you are confronted with {} Your role is to identify the patient's ailment by asking concise questions and efficiently analyzing your thoughts. Be explicit yet brief in your reasoning, and ask appropriate questions.\",\n",
+    "            ]\n",
+    "        elif self.bullet:\n",
+    "            first_sentence_options = [\n",
+    "                \"As a doctor in {}, you are in {} Your task is to diagnose a patient by asking concise questions and providing brief reasoning. Be explicit and to the point, present your reasoning and questions in bullet points.\",\n",
+    "                \"You are practicing medicine in {}. {} Your mission is to determine the patient's diagnosis through concise inquiry, being efficient in your thought process. Make your thinking clear and format your reasoning and questions as bullet points.\",\n",
+    "                \"While working as a physician in {}, {} Your role is to identify the patient's ailment by asking concise questions and efficiently analyzing your thoughts. Be explicit and present your questions and reasoning in bullet points.\",\n",
+    "                \"In {}, you find yourself in {} Your task is to diagnose a patient by asking concise questions and providing brief reasoning. Make your thinking clear and use bullet points to present your reasoning and questions.\",\n",
+    "                \"Serving as a doctor in {}, {} Your mission is to determine the patient's diagnosis through concise inquiry, being efficient in your thought process. Make your thinking clear and present your reasoning and questions in bullet points.\",\n",
+    "                \"As a physician in {}, you are confronted with {} Your role is to identify the patient's ailment by asking concise questions and efficiently analyzing your thoughts. Be explicit and format your reasoning and questions as bullet points.\",\n",
+    "            ]\n",
+    "        else:\n",
+    "            first_sentence_options = [\n",
+    "                \"As a doctor in {}, you are in {} Your task is to diagnose a patient by asking questions and carefully considering your thoughts. Explain your reasoning and ask pertinent questions.\",\n",
+    "                \"You are practicing medicine in {}. {} Your mission is to determine the patient's diagnosis through inquiry, being thorough in your thought process. Make your thinking explicit, then pose relevant questions.\",\n",
+    "                \"While working as a physician in {}, {} Your role is to identify the patient's ailment by asking questions and thoroughly analyzing your thoughts. Be explicit about your reasoning, and ask appropriate questions.\",\n",
+    "                \"In {}, you find yourself in {} Your task is to diagnose a patient by asking questions and carefully considering your thoughts. Explain your reasoning and ask pertinent questions.\",\n",
+    "                \"Serving as a doctor in {}, {} Your mission is to determine the patient's diagnosis through inquiry, being thorough in your thought process. Make your thinking explicit, then pose relevant questions.\",\n",
+    "                \"As a physician in {}, you are confronted with {} Your role is to identify the patient's ailment by asking questions and thoroughly analyzing your thoughts. Be explicit about your reasoning, and ask appropriate questions.\",\n",
+    "            ]\n",
+    "\n",
+    "        first_sentence = random.choice(first_sentence_options).format(self.country, random.choice(setting_doctor[self.setting]))\n",
+    "\n",
+    "        # Test request sentence for high resource setting\n",
+    "        if self.setting == \"high\" and self.infs < self.MAX_INFS:\n",
+    "            test_request_options = [\n",
+    "                \"You may also request tests if they are available and can assist in your diagnosis, using the format \\\"REQUEST TEST: [test]\\\". For instance, \\\"REQUEST TEST: Chest_X-Ray\\\".\",\n",
+    "                \"If helpful and accessible, you should request tests to aid your diagnosis using the format \\\"REQUEST TEST: [test]\\\". Example: \\\"REQUEST TEST: Chest_X-Ray\\\".\",\n",
+    "                \"Feel free to request any available tests that might help in diagnosing, using \\\"REQUEST TEST: [test]\\\". For example, \\\"REQUEST TEST: Chest_X-Ray\\\".\",\n",
+    "            ]\n",
+    "            test_request_sentence = random.choice(test_request_options)\n",
+    "        else:\n",
+    "            test_request_sentence = \"\"\n",
+    "\n",
+    "        # Question limit sentence options\n",
+    "        if final:\n",
+    "            question_limit_options = [\n",
+    "                \"You are only allowed to ask {} questions in total before you must make a decision.\",\n",
+    "                \"You have a limit of {} questions to ask before making a diagnosis.\",\n",
+    "                \"You can ask up to {} questions before you need to decide.\",\n",
+    "                \"You may ask a maximum of {} questions before diagnosing.\",\n",
+    "                \"A total of {} questions are allowed before you must diagnose.\",\n",
+    "                \"You have {} questions in total to reach your diagnosis.\",\n",
+    "                \"Only {} questions can be asked before making your decision.\",\n",
+    "                \"You are permitted to ask up to {} questions before you must decide.\",\n",
+    "            ]\n",
+    "            question_limit_sentence = random.choice(question_limit_options).format(self.MAX_INFS)\n",
+    "        else:\n",
+    "            question_limit_options = [\n",
+    "                \"You are only allowed to ask {} questions in total before you must make a decision. You have asked {} questions so far.\",\n",
+    "                \"You have a limit of {} questions to ask before making a diagnosis. So far, you've asked {} questions.\",\n",
+    "                \"You can ask up to {} questions before you need to decide. Currently, you have asked {} questions.\",\n",
+    "                \"You may ask a maximum of {} questions before diagnosing. You have already asked {} questions.\",\n",
+    "                \"A total of {} questions are allowed before you must diagnose. Up to now, you've asked {} questions.\",\n",
+    "                \"You have {} questions in total to reach your diagnosis. So far, you've used {} questions.\",\n",
+    "                \"Only {} questions can be asked before making your decision. You have asked {} questions till now.\",\n",
+    "                \"You are permitted to ask up to {} questions before you must decide. At present, you have asked {} questions.\",\n",
+    "            ]\n",
+    "            question_limit_sentence = random.choice(question_limit_options).format(self.MAX_INFS, self.infs)\n",
+    "        \n",
+    "\n",
+    "        # Diagnosis instruction options\n",
+    "        diagnosis_instruction_options = [\n",
+    "            \"Once you have decided to make a diagnosis, please type \\\"DIAGNOSIS READY: [diagnosis here]\\\".\",\n",
+    "            \"When ready to diagnose, enter \\\"DIAGNOSIS READY: [diagnosis here]\\\".\",\n",
+    "            \"After concluding your diagnosis, submit it using \\\"DIAGNOSIS READY: [diagnosis here]\\\".\",\n",
+    "            \"Upon reaching a diagnosis, please type \\\"DIAGNOSIS READY: [diagnosis here]\\\".\",\n",
+    "            \"Once you are confident in your diagnosis, enter \\\"DIAGNOSIS READY: [diagnosis here]\\\".\",\n",
+    "            \"When you have determined the diagnosis, submit it using \\\"DIAGNOSIS READY: [diagnosis here]\\\".\",\n",
+    "            \"After you have made a diagnosis, indicate it by typing \\\"DIAGNOSIS READY: [diagnosis here]\\\".\",\n",
+    "            \"When you are prepared to diagnose, please provide it using \\\"DIAGNOSIS READY: [diagnosis here]\\\".\",\n",
+    "        ]\n",
+    "        diagnosis_instruction_sentence = random.choice(diagnosis_instruction_options)\n",
+    "\n",
+    "        # Knows diagnosis sentence\n",
+    "        if self.knows_diagnosis and not final:\n",
+    "            knows_diagnosis_options = [\n",
+    "                \" You suspect that the patient suffers from {}. This affects the questions you ask the patient.\",\n",
+    "                \" You have a hunch that the patient may have {}. This should influence your questioning.\",\n",
+    "                \" You believe the patient might be suffering from {}. Let this guide your questions.\",\n",
+    "            ]\n",
+    "            knows_diagnosis_sentence = random.choice(knows_diagnosis_options).format(self.correct_diagnosis)\n",
+    "        else:\n",
+    "            knows_diagnosis_sentence = \"\""
    ]
   }
  ],
