created first samples of multiturn conversations

--- a/scripts/gpt_bacht_mode.ipynb
+++ b/scripts/gpt_bacht_mode.ipynb
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of entries: 1952\n"
+      "Number of entries: 100\n"
      ]
     }
    ],
@@ -26,7 +26,8 @@
     "# Load file of batched prompts and check if it is the correct file:\n",
     "\n",
     "# Define the file path\n",
-    "file_path = \"../results/batched_prompts.jsonl\"\n",
+    "situations_name = \"specialty_x_domain\"\n",
+    "file_path = \"../results/batched_prompts_\" + situations_name + \".jsonl\"\n",
     "\n",
     "# Initialize a counter\n",
     "count = 0\n",
@@ -51,7 +52,7 @@
       "Connecting to openai\n",
       "Creating batch file\n",
       "Batch file successfully created\n",
-      "FileObject(id='file-vfQPHwDHFSjEPoQRans6vkU2', bytes=1747516, created_at=1731264305, filename='batched_prompts.jsonl', object='file', purpose='batch', status='processed', status_details=None)\n",
+      "FileObject(id='file-AdXU5muUI2pw99IhcC442nw1', bytes=88621, created_at=1731670781, filename='batched_prompts_specialty_x_domain.jsonl', object='file', purpose='batch', status='processed', status_details=None)\n",
       "Launch batch\n",
       "Batch successfully launched\n",
       "Batch id saved to ../results/batch_id.txt and batch object saved to ../results/batch.txt\n"
@@ -67,14 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch(id='batch_6730ff32674c8190b8141fa8482d90a3', completion_window='24h', created_at=1731264306, endpoint='/v1/chat/completions', input_file_id='file-vfQPHwDHFSjEPoQRans6vkU2', object='batch', status='completed', cancelled_at=None, cancelling_at=None, completed_at=1731265062, error_file_id=None, errors=None, expired_at=None, expires_at=1731350706, failed_at=None, finalizing_at=1731264645, in_progress_at=1731264307, metadata={'description': 'generate prompts of health care workers'}, output_file_id='file-xV5CrECByzNlLid1xeZde2qJ', request_counts=BatchRequestCounts(completed=1952, failed=0, total=1952))\n",
+      "Batch(id='batch_673732fec21881909a5629f67f397ffd', completion_window='24h', created_at=1731670782, endpoint='/v1/chat/completions', input_file_id='file-AdXU5muUI2pw99IhcC442nw1', object='batch', status='completed', cancelled_at=None, cancelling_at=None, completed_at=1731672004, error_file_id=None, errors=None, expired_at=None, expires_at=1731757182, failed_at=None, finalizing_at=1731671995, in_progress_at=1731670783, metadata={'description': 'generate multiturn interactions for medical instruction tuning'}, output_file_id='file-SQwPNrjgAZDNGfzzGRM00WOT', request_counts=BatchRequestCounts(completed=100, failed=0, total=100))\n",
       "status = completed\n"
      ]
     }
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
