--- a/scripts/generate_batch_of_prompts.ipynb
+++ b/scripts/generate_batch_of_prompts.ipynb
@@ -11,12 +11,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "from multiturn_modul import MultiturnStyle, get_multiturn_style\n",
+    "import pandas as pd\n",
+    "import random"
    ]
   },
   {
