pipeline to generate batch of prompts for multiturn

--- a/scripts/multiturn_get_batch_prompts.ipynb
+++ b/scripts/multiturn_get_batch_prompts.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 3 -> Multiturn Generation"
+    "### Generates batches for Multiturn chat creations\n",
+    "\n",
+    "* Cell 0: import necesary libraries\n",
+    "* Cell 1: Create system prompts for user and chatbot (called situations) and store them for later use\n",
+    "* Cell 2: Create file that stores the multiturn conversation and add the initial prompt to it\n",
+    "* Cell 3: Helper function to build prompt from chat history\n",
+    "* Cell 4: Creates batches of prompts"
    ]
   },
   {
@@ -22,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -56,20 +62,19 @@
    ],
    "source": [
     "# Create situations\n",
+    "# Creates randomly system prompts for the user and the chatbot\n",
     "\n",
     "# Path for input data and to store prompts\n",
     "initial_prompts_name = \"specialty_x_domain\"\n",
     "initial_prompts_path = \"../results/parsed_prompts_\" + initial_prompts_name + \".json\"\n",
     "output_path = \"../results/situations_\" + initial_prompts_name + \".jsonl\"\n",
     "\n",
-    "\n",
-    "# store prompts in a list\n",
+    "# store initial prompts in a list\n",
     "with open(initial_prompts_path, 'r') as file:\n",
     "    initial_prompts_list = json.load(file)  # Load JSON data from file\n",
     "\n",
     "# Load countries necessary to give the medical setting\n",
     "countries = pd.read_csv(\"../resources/countries_by_income_category.csv\")\n",
-    "\n",
     "\n",
     "print(\"Creating list of situations and initial prompts\")\n",
     "\n",
@@ -102,6 +107,50 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create initial multiturn_situation .jsonl\n",
+    "# Function to get the initial prompt\n",
+    "\n",
+    "situations_name = \"specialty_x_domain\"\n",
+    "\n",
+    "situations_path = \"../results/situations_\" + situations_name + \".jsonl\"\n",
+    "output_path = \"../results/multiturn_\" + situations_name + \".jsonl\"\n",
+    "\n",
+    "multiturn_conversations = []\n",
+    "with open(situations_path, 'r') as file:\n",
+    "    for entry in file:\n",
+    "        data = json.loads(entry)\n",
+    "        line = {\n",
+    "            \"id\": data[\"id\"],\n",
+    "            \"conversation\": [\n",
+    "                {\"role\": \"user\", \"value\": data[\"initial_prompt\"]},\n",
+    "            ]\n",
+    "        }\n",
+    "        multiturn_conversations.append(line)\n",
+    "# Save to JSON file\n",
+    "with open(output_path, 'w') as jsonl_file:\n",
+    "    for conv in multiturn_conversations:\n",
+    "        jsonl_file.write(json.dumps(conv) + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_prompt(conv_list):\n",
+    "    prompt = []\n",
+    "    for entry in conv_list:\n",
+    "        prompt.append(f\"({entry[\"role\"]}) {entry[\"value\"]} \\n\")\n",
+    "    return \"\".join(prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -115,14 +164,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 49461.13it/s]"
+      "100%|██████████| 100/100 [00:00<00:00, 49944.08it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "batch of 100 prompts saved to ../results/batched_prompts_specialty_x_domain.jsonl\n"
+      "batch of 100 prompts saved to ../results/batched_prompts_specialty_x_domain_turn_1.jsonl\n",
+      "IMPORTANT: batches were created for turn 1 and chatbot\n"
      ]
     },
     {
@@ -142,7 +192,10 @@
     "# Path for input data and to store prompts\n",
     "situations_name = \"specialty_x_domain\"\n",
     "situations_path = \"../results/situations_\" + situations_name + \".jsonl\"\n",
-    "output_path = \"../results/batched_prompts_\" + situations_name + \".jsonl\"\n",
+    "multiturn_conv_path = \"../results/multiturn_\" + situations_name + \".jsonl\"\n",
+    "turn = 1\n",
+    "system_is = \"chatbot\"\n",
+    "output_path = \"../results/batched_prompts_\" + situations_name + \"_turn_\" + str(turn) + \".jsonl\"\n",
     "\n",
     "\n",
     "# store prompts in a list\n",
@@ -153,29 +206,40 @@
     "            break\n",
     "        situations.append(json.loads(line))\n",
     "\n",
-    "print(\"Creating a batch of prompts\")\n",
-    "print(f\"that can be processed by {gpt_model} in batch mode\")\n",
+    "# store multiturn convs in a dict\n",
+    "multiturn_conv = {}\n",
+    "with open(multiturn_conv_path, 'r') as file:\n",
+    "    for i, line in enumerate(file):\n",
+    "        if i >= 100:\n",
+    "            break\n",
+    "        line_as_json = json.loads(line)\n",
+    "        multiturn_conv[line_as_json[\"id\"]] = line_as_json[\"conversation\"]\n",
+    "\n",
+    "\n",
+    "print(f\"Creating a batch of prompts that can be processed by {gpt_model} in batch mode\")\n",
     "\n",
     "with open(output_path, 'w') as file:\n",
     "    nbr_of_prompts = 0\n",
     "    for situation in tqdm(situations):\n",
-    "        line = {\n",
-    "            \"custom_id\": situation[\"id\"],\n",
-    "            \"method\": \"POST\",\n",
-    "            \"url\": \"/v1/chat/completions\",\n",
-    "            \"body\": {\n",
-    "                \"model\": gpt_model,\n",
-    "                \"messages\": [\n",
-    "                    {\"role\": \"system\", \"content\": situation[\"system_prompt_chatbot\"]},\n",
-    "                    {\"role\": \"user\", \"content\": situation[\"initial_prompt\"]}\n",
-    "                ],\n",
-    "                \"max_tokens\": 1000\n",
+    "        if situation[\"nbr_of_turns\"] >= turn:\n",
+    "            line = {\n",
+    "                \"custom_id\": situation[\"id\"],\n",
+    "                \"method\": \"POST\",\n",
+    "                \"url\": \"/v1/chat/completions\",\n",
+    "                \"body\": {\n",
+    "                    \"model\": gpt_model,\n",
+    "                    \"messages\": [\n",
+    "                        {\"role\": \"system\", \"content\": situation[\"system_prompt_\" + system_is]},\n",
+    "                        {\"role\": \"user\", \"content\": build_prompt(multiturn_conv[situation[\"id\"]])}\n",
+    "                    ],\n",
+    "                    \"max_tokens\": 1000\n",
+    "                }\n",
     "            }\n",
-    "        }\n",
-    "        file.write(json.dumps(line) + '\\n')\n",
-    "        nbr_of_prompts += 1\n",
+    "            file.write(json.dumps(line) + '\\n')\n",
+    "            nbr_of_prompts += 1\n",
     "\n",
-    "print(f\"batch of {nbr_of_prompts} prompts saved to {output_path}\")"
+    "print(f\"batch of {nbr_of_prompts} prompts saved to {output_path}\")\n",
+    "print(f\"IMPORTANT: batches were created for turn {turn} and {system_is}\")"
    ]
   }
  ],
